# asort

./: .deepsource.toml  .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  .pylintrc  README.md  requirements-ci.txt  requirements-test.txt  setup.cfg  tox.ini
.github/workflows/: asort-ci.yaml
docs/source/: api.rst  conf.py  index.rst  usage.rst
src/asort/: __init__.py  __main__.py  __version__.py  api.py  main.py
tests/integration/: conftest.py  test_cli.py
tests/integration/__snapshots__/: test_cli.ambr
tests/integration/fixtures/: complex_file.py  multi_line_string_indentation.py  multi_line_w_comments.py  multi_single_line_in_line.py  no_change.py  single_line_w_comments.py
tests/unit/: test_api.py  test_main.py
tests/unit/__snapshots__/: test_api.ambr  test_main.ambr
