[metadata]
name = asort
version = file: VERSION.txt
author = cpendery
description = A Python utility / library to sort __all__ lists.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/cpendery/asort
project_urls =
    Bug Tracker = https://github.com/cpendery/asort/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7

[options.data_files]
asort.version = VERSION.txt

[options.entry_points]
console_scripts =
    asort=asort.main:main

[options.packages.find]
where = src

[run]
omit =
    *asort/__main__.py
    *asort/__init__.py
